AM_CPPFLAGS          =  -I$(top_srcdir)/include -I/share/apps/libpcap/1.7.4/include
lib_LTLIBRARIES      =  libflower.la
libflower_la_SOURCES =                                                        \
                        Daemon.cpp                                            \
                        date2string.cpp                                       \
                        Diagnostic.cpp                                        \
                        diagnostic.cpp                                        \
                        Exception.cpp                                         \
                        ExceptionHandler.cpp                                  \
                        FlowCache.cpp                                         \
                        Flow.cpp                                              \
                        FlowKey.cpp                                           \
                        global.cpp                                            \
                        ItemCounter.cpp                                       \
                        num2string.cpp                                        \
                        osUtil.cpp                                            \
                        OutputHelper.cpp                                      \
                        PacketBuilder.cpp                                     \
                        Packet.cpp                                            \
                        PacketParser.cpp                                      \
                        PacketRinger.cpp                                      \
                        ProgramOptions.cpp                                    \
                        SummaryExporter.cpp                                   \
                        uchar2string.cpp
